# r-i18n

./: .travis.yml  Cargo.toml  README.md
src/: error.rs  i18n.rs  lib.rs
tests/: functionnal.rs
translations/: en.json  fr.json
